syntax = "proto3";

option csharp_namespace = "ED.DomainServices.CodeMessages";

package code_message;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "enums.proto";

service CodeMessage {
  // send
  rpc Send (SendRequest) returns (google.protobuf.Empty);

  // open
  rpc Open (OpenRequest) returns (OpenResponse);

  rpc Read (ReadRequest) returns (ReadResponse);
  rpc GetSenderProfile (GetSenderProfileRequest) returns (GetSenderProfileResponse);
  rpc GetTimestampNRD (GetTimestampRequest) returns (GetTimestampResponse);
  rpc GetTimestampNRO (GetTimestampRequest) returns (GetTimestampResponse);
  rpc GetBlobTimestamp (GetBlobTimestampRequest) returns (GetBlobTimestampResponse);
  rpc GetSummary (GetSummaryRequest) returns (GetSummaryResponse);
  rpc GetPdfAsRecipient (GetPdfAsRecipientRequest) returns (GetPdfAsRecipientResponse);
}

message SendRequest {
  string identifier = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  string phone = 5;
  string email = 6;
  int32 sender_login_id = 7;
  int32 sender_profile_id = 8;
  int32 template_id = 9;
  string subject = 10;
  string body = 11;
  string meta_fields = 12;
  repeated int32 blob_ids = 13;
}

message OpenRequest {
  string access_code = 1;
}

message OpenResponse {
  bool is_successful = 1;
  google.protobuf.Int32Value message_id = 2;
  string error = 3;
}

message ReadRequest {
  int32 message_id = 1;
}

message ReadResponse {
  message MessageProfile {
    int32 profile_id = 1;
    string profile_name = 2;
    google.protobuf.StringValue login_name = 3;
  }

  message MessageBlob {
    int32 blob_id = 1;
    string file_name = 2;
    google.protobuf.Int64Value size = 3;
    google.protobuf.StringValue document_registration_number = 4;
    enums.MalwareScanResultStatus status = 5;
    google.protobuf.BoolValue is_malicious = 6;
    repeated MessageBlobSignature signatures = 7;
    string hash = 8;
  }

  message MessageBlobSignature {
    bool covers_document = 1;
    google.protobuf.Timestamp sign_date = 2;
    bool is_timestamp = 3;
    bool valid_at_time_of_signing = 4;
    string issuer = 5;
    string subject = 6;
    google.protobuf.Timestamp valid_to = 7;
    google.protobuf.Timestamp valid_from = 8;
  }

  message Message {
    int32 message_id = 1;
    google.protobuf.Timestamp date_sent = 2;
    google.protobuf.Timestamp date_received = 3;
    MessageProfile sender = 4;
    MessageProfile recipient = 5;
    int32 template_id = 6;
    string subject = 7;
    string body = 8;
    string template_name = 9;
    repeated MessageBlob blobs = 10;
    string access_code = 11;
    google.protobuf.StringValue rnu = 12;
  }

  Message message = 1;
}

message GetSenderProfileRequest {
  string access_code = 1;
}

message GetSenderProfileResponse {
  string email = 1;
  string name = 2;
  string phone = 3;
  string identifier = 4;
  enums.ProfileType type = 5;
}

message GetTimestampRequest {
  string access_code = 1;
}

message GetTimestampResponse {
  string file_name = 1;
  bytes timestamp = 2;
}

message GetBlobTimestampRequest {
  string access_code = 1;
  int32 blob_id = 2;
}

message GetBlobTimestampResponse {
  string file_name = 1;
  bytes timestamp = 2;
}

message GetSummaryRequest {
  string access_code = 1;
}

message GetSummaryResponse {
  string file_name = 1;
  bytes summary = 2;
  string content_type = 3;
}

message GetPdfAsRecipientRequest {
  string access_code = 1;
}

message GetPdfAsRecipientResponse {
  string file_name = 1;
  string content_type = 2;
  bytes content = 3;
}
